Updated one of termostat

--- a/www/tablet/index.html
+++ b/www/tablet/index.html
@@ -91,11 +91,8 @@
                 <header>SCHLAFZIMMER</header>
                 <div class="sheet">
                     <div class="row">
-                        <div class="cell" data-type="thermostat" data-device="SchlafzimmerHeizung_Clima" data-valve="ValvePosition"></div>
-                        <div class="cell">
-                            <div class="big" data-type="symbol" data-device="SchlafzimmerFenster"></div>
-                            <div data-type="label" class="top-narrow darker small">Fenster</div>
-                        </div>
+                        <div class="cell" data-type="thermostat" data-device="MAX_14e1dd" data-get="desiredTemperature" data-set="desiredTemperature" data-temp="temperature" data-valve="valveposition"></div>
+                        
                     </div>
                 </div>
             </li>
