--- a/www/tablet/index.html
+++ b/www/tablet/index.html
@@ -91,8 +91,13 @@
                 <header>SCHLAFZIMMER</header>
                 <div class="sheet">
                     <div class="row">
-                        <div class="cell" data-type="thermostat" data-device="MAX_14e1dd" data-get="desiredTemperature" data-set="desiredTemperature" data-temp="temperature" data-valve="valveposition"></div>
-                        
+                        <div data-type="thermostat"
+                           data-device="MAX_14e1dd" 
+                           data-valve="valveposition" 
+                           data-get="desiredTemperature" 
+                           data-temp="temperature" 
+                           data-set="desiredTemperature">
+                      </div>
                     </div>
                 </div>
             </li>
