--- a/www/tablet/index.html
+++ b/www/tablet/index.html
@@ -91,13 +91,16 @@
                 <header>SCHLAFZIMMER</header>
                 <div class="sheet">
                     <div class="row">
-                        <div data-type="thermostat"
-                           data-device="MAX_14e1dd" 
-                           data-valve="valveposition" 
-                           data-get="desiredTemperature" 
-                           data-temp="temperature" 
-                           data-set="desiredTemperature">
-                      </div>
+                        <div
+    data-type="thermostat"
+    data-device="MAX_14e20e"
+    data-valve="valveposition"
+    data-get="desiredTemperature"
+    data-temp="MAX_14e1dd:temperature"
+    data-set="desiredTemperature"
+    data-step="0.5"
+    class="big">
+</div>
                     </div>
                 </div>
             </li>
@@ -105,7 +108,16 @@
                 <header>KINDERZIMMER</header>
                 <div class="sheet">
                     <div class="row">
-                        <div class="cell" data-type="thermostat" data-device="KinderzimmerHeizung_Clima" data-valve="ValvePosition"></div>
+                                                <div
+    data-type="thermostat"
+    data-device="14e20e"
+    data-valve="valveposition"
+    data-get="desiredTemperature"
+    data-temp="14e20e:temperature"
+    data-set="desiredTemperature"
+    data-step="0.5"
+    class="big">
+</div>
                         <div class="cell">
                             <div class="big" data-type="symbol" data-device="KinderzimmerFenster"></div>
                             <div class="top-narrow  darker small">Fenster</div>
