Added new spinners

--- a/www/tablet/index.html
+++ b/www/tablet/index.html
@@ -38,98 +38,192 @@
                 <header>Obyvací pokoj</header>
                 <div class="sheet">
                     <div class="row">
-                        <div class="cell" data-type="thermostat"
-                             data-device="MAX_14e20e"
-                             data-valve="MAX_131f32:valveposition"     
-                             data-get="desiredTemperature"     
-                             data-temp="temperature"     
-                             data-set="desiredTemperature"     
-                             data-step="0.5"     
-                             class="big"
-                             data-mode="mode"
-                             data-min="10"
-                             data-max="25">
+                        <div class="cell">
+                            <div style="margin: 5% 0 0;" data-type="thermostat"
+                                 data-device="MAX_14e20e"
+                                 data-valve="MAX_131f32:valveposition"     
+                                 data-get="desiredTemperature"     
+                                 data-temp="temperature"     
+                                 data-set="desiredTemperature"     
+                                 data-step="0.5"     
+                                 class="big"
+                                 data-mode="mode"
+                                 data-min="10"
+                                 data-max="25">
+                            </div>
                         </div>
                     </div>
                     <div class="row">
-                        <div class="cell" data-type="spinner"
-                            data-device="MAX_14e20e"
-                            data-get="desiredTemperature"
-                            data-set="desiredTemperature" 
-                            data-min="10"
-                            data-max="25"
-                            data-unit="°"
-                            class="valueonly">
+                        <div class="cell center-align">
+                            <div style="display: block; margin: auto;" data-type="spinner" 
+                                data-device="MAX_14e20e"
+                                data-get="desiredTemperature"
+                                data-set="desiredTemperature"
+                                class="valueonly"
+                                data-step="0.5"
+                                data-min="10"
+                                data-max="25"
+                                data-icon-left-color="blue"
+                                data-icon-right-color="red"
+                                data-unit="&deg;">
+                            </div>
                         </div>
                     </div>
-                </div>
-                
+                </div>        
             </li>
             <li data-row="1" data-col="4" data-sizey="4" data-sizex="3">
                 <header>Pokoj dolní</header>
-                <div data-type="thermostat"
-                     data-device="MAX_168181"
-                     data-valve="MAX_1304ef:valveposition"     
-                     data-get="desiredTemperature"     
-                     data-temp="temperature"     
-                     data-set="desiredTemperature"     
-                     data-step="0.5"     
-                     class="big"
-                     data-mode="mode"
-                     data-min="10"
-                     data-max="25">
-                </div>
+                <div class="sheet">
+                    <div class="row">
+                        <div class="cell">
+                            <div style="margin: 5% 0 0;" data-type="thermostat"
+                                 data-device="MAX_168181"
+                                 data-valve="MAX_1304ef:valveposition"     
+                                 data-get="desiredTemperature"     
+                                 data-temp="temperature"     
+                                 data-set="desiredTemperature"     
+                                 data-step="0.5"     
+                                 class="big"
+                                 data-mode="mode"
+                                 data-min="10"
+                                 data-max="25">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="cell center-align">
+                            <div style="display: block; margin: auto;" data-type="spinner" 
+                                data-device="MAX_168181"
+                                data-get="desiredTemperature"
+                                data-set="desiredTemperature"
+                                class="valueonly"
+                                data-step="0.5"
+                                data-min="10"
+                                data-max="25"
+                                data-icon-left-color="blue"
+                                data-icon-right-color="red"
+                                data-unit="&deg;">
+                            </div>
+                        </div>
+                    </div>
+                </div>                                 
             </li>
             <li data-row="1" data-col="7" data-sizey="4" data-sizex="3">
                 <header>Ložnice</header>
-                <div data-type="thermostat"
-                     data-device="MAX_14e1dd"
-                     data-valve="MAX_130dab:valveposition"     
-                     data-get="desiredTemperature"     
-                     data-temp="temperature"     
-                     data-set="desiredTemperature"     
-                     data-step="0.5"     
-                     class="big"
-                     data-mode="mode"
-                     data-min="10"
-                     data-max="25">
-                </div>
+                <div class="sheet">
+                    <div class="row">
+                        <div class="cell">                
+                            <div style="margin: 5% 0 0;" data-type="thermostat"
+                                 data-device="MAX_14e1dd"
+                                 data-valve="MAX_130dab:valveposition"     
+                                 data-get="desiredTemperature"     
+                                 data-temp="temperature"     
+                                 data-set="desiredTemperature"     
+                                 data-step="0.5"     
+                                 class="big"
+                                 data-mode="mode"
+                                 data-min="10"
+                                 data-max="25">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="cell center-align">
+                            <div style="display: block; margin: auto;" data-type="spinner" 
+                                data-device="MAX_14e1dd"
+                                data-get="desiredTemperature"
+                                data-set="desiredTemperature"
+                                class="valueonly"
+                                data-step="0.5"
+                                data-min="10"
+                                data-max="25"
+                                data-icon-left-color="blue"
+                                data-icon-right-color="red"
+                                data-unit="&deg;">
+                            </div>
+                        </div>
+                    </div>
+                </div>                            
             </li>
             <li data-row="1" data-col="10" data-sizey="4" data-sizex="3">
                 <header>Pracovna</header>
-                <div data-type="thermostat"
-                     data-device="MAX_14ec88"
-                     data-valve="MAX_130dac:valveposition"     
-                     data-get="desiredTemperature"     
-                     data-temp="temperature"     
-                     data-set="desiredTemperature"     
-                     data-step="0.5"     
-                     class="big"
-                     data-mode="mode"
-                     data-min="10"
-                     data-max="25">
-                </div>
+                <div class="sheet">
+                    <div class="row">
+                        <div class="cell">                 
+                            <div style="margin: 5% 0 0;" data-type="thermostat"
+                                 data-device="MAX_14ec88"
+                                 data-valve="MAX_130dac:valveposition"     
+                                 data-get="desiredTemperature"     
+                                 data-temp="temperature"     
+                                 data-set="desiredTemperature"     
+                                 data-step="0.5"     
+                                 class="big"
+                                 data-mode="mode"
+                                 data-min="10"
+                                 data-max="25">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="cell center-align">
+                            <div style="display: block; margin: auto;" data-type="spinner" 
+                                data-device="MAX_14ec88"
+                                data-get="desiredTemperature"
+                                data-set="desiredTemperature"
+                                class="valueonly"
+                                data-step="0.5"
+                                data-min="10"
+                                data-max="25"
+                                data-icon-left-color="blue"
+                                data-icon-right-color="red"
+                                data-unit="&deg;">
+                            </div>
+                        </div>
+                    </div>
+                </div>                            
             </li>
-            <li data-row="5" data-col="1" data-sizey="3" data-sizex="3">
+            <li data-row="5" data-col="1" data-sizey="4" data-sizex="3">
                 <header>Koupelna</header>
-                <div data-type="thermostat"
-                     data-device="MAX_161d33"
-                     data-valve="valveposition"     
-                     data-get="desiredTemperature"     
-                     data-temp="temperature"     
-                     data-set="desiredTemperature"     
-                     data-step="0.5"     
-                     class="big"
-                     data-mode="mode"
-                     data-min="10"
-                     data-max="25">
-                </div>
+                <div class="sheet">
+                    <div class="row">
+                        <div class="cell">                
+                            <div style="margin: 5% 0 0;" data-type="thermostat"
+                                 data-device="MAX_161d33"
+                                 data-valve="valveposition"     
+                                 data-get="desiredTemperature"     
+                                 data-temp="temperature"     
+                                 data-set="desiredTemperature"     
+                                 data-step="0.5"     
+                                 class="big"
+                                 data-mode="mode"
+                                 data-min="10"
+                                 data-max="25">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="cell center-align">
+                            <div style="display: block; margin: auto;" data-type="spinner" 
+                                data-device="MAX_161d33"
+                                data-get="desiredTemperature"
+                                data-set="desiredTemperature"
+                                class="valueonly"
+                                data-step="0.5"
+                                data-min="10"
+                                data-max="25"
+                                data-icon-left-color="blue"
+                                data-icon-right-color="red"
+                                data-unit="&deg;">
+                            </div>
+                        </div>
+                    </div>
+                </div>                                                        
             </li>
-            <li data-row="5" data-col="4" data-sizey="3" data-sizex="6">
+            <li data-row="5" data-col="4" data-sizey="4" data-sizex="6">
                 <header>EXAMPLE5</header>
                 <!-- place your widget here -->
             </li>
-            <li data-row="5" data-col="10" data-sizey="3" data-sizex="3">
+            <li data-row="5" data-col="10" data-sizey="4" data-sizex="3">
                 <header>EXAMPLE6</header>
                 <!-- place your widget here -->
             </li>
