--- a/www/tablet/index.html
+++ b/www/tablet/index.html
@@ -46,7 +46,6 @@
                                  data-temp="temperature"     
                                  data-set="desiredTemperature"     
                                  data-step="0.5"     
-                                 class="big"
                                  data-mode="mode"
                                  data-min="10"
                                  data-max="25">
@@ -83,7 +82,6 @@
                                  data-temp="temperature"     
                                  data-set="desiredTemperature"     
                                  data-step="0.5"     
-                                 class="big"
                                  data-mode="mode"
                                  data-min="10"
                                  data-max="25">
@@ -120,7 +118,6 @@
                                  data-temp="temperature"     
                                  data-set="desiredTemperature"     
                                  data-step="0.5"     
-                                 class="big"
                                  data-mode="mode"
                                  data-min="10"
                                  data-max="25">
@@ -157,7 +154,6 @@
                                  data-temp="temperature"     
                                  data-set="desiredTemperature"     
                                  data-step="0.5"     
-                                 class="big"
                                  data-mode="mode"
                                  data-min="10"
                                  data-max="25">
@@ -194,7 +190,6 @@
                                  data-temp="temperature"     
                                  data-set="desiredTemperature"     
                                  data-step="0.5"     
-                                 class="big"
                                  data-mode="mode"
                                  data-min="10"
                                  data-max="25">
@@ -220,11 +215,11 @@
                 </div>                                                        
             </li>
             <li data-row="5" data-col="4" data-sizey="4" data-sizex="6">
-                <header>EXAMPLE5</header>
+                <header>...</header>
                 <!-- place your widget here -->
             </li>
             <li data-row="5" data-col="10" data-sizey="4" data-sizex="3">
-                <header>EXAMPLE6</header>
+                <header>...</header>
                 <!-- place your widget here -->
             </li>
         </ul>
